feat: control financiero con ingresos separados + auditoría integral de módulos
Sesión 2026-06-11 — requerimientos del cliente y auditoría UX completa.

Control financiero (requerimientos del cliente):
- Migración V5: dimensiones categoria_ingreso/viaje/vehiculo/tipo_vehiculo/
  conductor en movimientos_caja + backfill histórico e índices
- Migración V6: cuota_salida_combi en empresa_config; se registra como
  CUOTA_SALIDA_COMBI al confirmar salida de viaje COMBI (config en
  Configuración → Empresa)
- Migración V7: flota restringida a COMBI y CAMIONETA (CHECKs, validaciones
  backend, constantes frontend)
- GET /api/reportes/ingresos: filtros fecha/agencia/usuario/tipoVehiculo/
  categoría con desglose agrupado (groupBy whitelist) + sección de ingresos
  en /reportes y KPIs por categoría en /gerente y Tablero
- Tarifas respetan temporada activa (findVigenteEnTemporada) en /buscar y venta

Fugas de dinero cerradas (todo cobro en efectivo exige caja abierta):
- Encomiendas al contado en origen no registraban ingreso en caja
- Encomiendas externas pagadas por el conductor solo dejaban log.warn
- /api/viajes/disponibles ofrecía viajes EN_RUTA de hace semanas
- Promociones aplicaban sin validar vigencia; comprobante de encomienda
  mostraba el precio sin descuento

Permisos y seguridad:
- GERENTE puede asignar módulos (con guardas: no a pares/superiores)
- CajaService.verificarAcceso: ownership por rol en movimientos y reporte PDF

Auditoría UX por módulo (capturas Playwright por rol, claro/oscuro):
- Tablero: KPI encomiendas conectado, desglose del turno, nombre real de
  agencia; fuera panel Sistema y grid GESTIÓN duplicado
- Gerencial: fuera Controles activos/Bitácora; cajas de operadores siempre
  visibles; ingresos de hoy por servicio
- Caja: 6 tarjetas por categoría, filtros Externas/Cuota combi, gerente
  aterriza en Consolidado, PDF de cierre completo
- Viajes: alerta llegadas sin confirmar (+24h EN_RUTA) y S/ recaudado por
  viaje (ingresosViaje en batchEnrich)